@@ -7,10 +7,12 @@ import com.mojang.serialization.codecs.RecordCodecBuilder;
 import com.mojang.serialization.codecs.RecordCodecBuilder.Instance;
 import com.mojang.serialization.codecs.RecordCodecBuilder.Mu;
 import net.minecraft.ChatFormatting;
+import net.minecraft.core.Holder;
 import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
+import org.jetbrains.annotations.NotNull;
+import sirttas.dpanvil.api.data.DataManagerCodecs;
+import sirttas.elementalcraft.api.ElementalCraftApi;
 import sirttas.elementalcraft.api.element.ElementType;
 import sirttas.elementalcraft.api.element.IElementTypeProvider;
 import sirttas.elementalcraft.api.infusion.tool.effect.IToolInfusionEffect;
@@ -26,7 +28,8 @@ public class ToolInfusion implements IElementTypeProvider {
 			ElementType.forGetter(ToolInfusion::getElementType),
 			IToolInfusionEffect.CODEC.listOf().fieldOf(ECNames.EFFECTS).forGetter(ToolInfusion::getEffects)
 	).apply(builder, ToolInfusion::new));
-	
+	public static final Codec<Holder<ToolInfusion>> HOLDER_CODEC = DataManagerCodecs.holderCodec(ElementalCraftApi.TOOL_INFUSION_MANAGER_KEY, CODEC);
+
 	private ResourceLocation id;
 	private final ElementType elementType;
 	private final List<IToolInfusionEffect> effects;
@@ -39,13 +42,12 @@ public class ToolInfusion implements IElementTypeProvider {
 	protected static <T extends ToolInfusion> P1<Mu<T>, ElementType> codec(Instance<T> builder) {
 		return builder.group(ElementType.forGetter(ToolInfusion::getElementType));
 	}
-	
-	@OnlyIn(Dist.CLIENT)
+
 	public List<Component> getTooltipInformation() {
 		List<Component> tooltip = Lists.newArrayList();
 
 		if (effects.size() == 1) {
-			tooltip.add(Component.translatable("tooltip.elementalcraft.infused.single", elementType.getDisplayName(), effects.get(0).getDescription()).withStyle(ChatFormatting.YELLOW));
+			tooltip.add(Component.translatable("tooltip.elementalcraft.infused.single", elementType.getDisplayName(), effects.getFirst().getDescription()).withStyle(ChatFormatting.YELLOW));
 		} else {
 			tooltip.add(Component.translatable("tooltip.elementalcraft.infused", elementType.getDisplayName()).withStyle(ChatFormatting.YELLOW));
 			effects.stream().map(e -> Component.literal(" ").append(e.getDescription()).withStyle(ChatFormatting.YELLOW)).forEach(tooltip::add);
@@ -54,7 +56,7 @@ public class ToolInfusion implements IElementTypeProvider {
 	}
 
 	@Override
-	public ElementType getElementType() {
+	public @NotNull ElementType getElementType() {
 		return elementType;
 	}
 
