@@ -1,8 +1,6 @@
 package sirttas.elementalcraft.interaction.mekanism.injector;
 
-import mekanism.api.chemical.Chemical;
 import mekanism.api.chemical.ChemicalStack;
-import mekanism.api.inventory.IgnoredIInventory;
 import mekanism.api.recipes.MekanismRecipe;
 import mekanism.api.recipes.ingredients.ChemicalStackIngredient;
 import mekanism.api.recipes.ingredients.ItemStackIngredient;
@@ -11,6 +9,7 @@ import mekanism.common.registration.impl.RecipeTypeRegistryObject;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.RecipeInput;
 import net.minecraft.world.item.crafting.RecipeManager;
 import sirttas.elementalcraft.api.pureore.factory.AbstractPureOreRecipeFactory;
 import sirttas.elementalcraft.config.ECConfig;
@@ -18,13 +17,11 @@ import sirttas.elementalcraft.tag.ECTags;
 
 import javax.annotation.Nonnull;
 
-public abstract class AbstractMekanismPureOreRecipeFactory<T extends MekanismRecipe> extends AbstractPureOreRecipeFactory<IgnoredIInventory, T> {
+public abstract class AbstractMekanismPureOreRecipeFactory<I extends RecipeInput, T extends MekanismRecipe<I>> extends AbstractPureOreRecipeFactory<I, T> {
 
-	private final RecipeTypeRegistryObject<T, ?> recipeTypeRegistryObject;
 
-	protected AbstractMekanismPureOreRecipeFactory(@Nonnull RecipeManager recipeManager, @Nonnull RecipeTypeRegistryObject<T, ?> recipeType) {
+	protected AbstractMekanismPureOreRecipeFactory(@Nonnull RecipeManager recipeManager, @Nonnull RecipeTypeRegistryObject<I, T, ?> recipeType) {
 		super(recipeManager, recipeType.getRecipeType());
-		this.recipeTypeRegistryObject = recipeType;
 	}
 
 	@Nonnull
@@ -32,7 +29,7 @@ public abstract class AbstractMekanismPureOreRecipeFactory<T extends MekanismRec
 		var representations = old.getRepresentations();
 
 		if (!representations.isEmpty()) {
-			return getInput(ingredient, (int) old.getNeededAmount(representations.get(0)));
+			return getInput(ingredient, (int) old.getNeededAmount(representations.getFirst()));
 		}
 		return getInput(ingredient);
 	}
@@ -47,34 +44,22 @@ public abstract class AbstractMekanismPureOreRecipeFactory<T extends MekanismRec
 		return IngredientCreatorAccess.item().from(ingredient, getInputMultiplier(size));
 	}
 
-	protected static ChemicalStackIngredient.GasStackIngredient tweakOutput(ChemicalStackIngredient.GasStackIngredient chemicalInput) {
-		var gas = IngredientCreatorAccess.gas();
-
-		var ingredients = chemicalInput.getRepresentations().stream()
-				.map(s -> {
-					var copy = s.copy();
-
-					copy.setAmount(getOutputMultiplier(chemicalInput.getNeededAmount(s)));
-					return gas.from(copy);
-				})
-				.toList();
-
-		if (ingredients.isEmpty()) {
-			return chemicalInput;
-		} else if (ingredients.size() == 1) {
-			return ingredients.get(0);
-		}
-		return gas.createMulti(ingredients.toArray(ChemicalStackIngredient.GasStackIngredient[]::new));
+	protected static ChemicalStackIngredient tweakOutput(ChemicalStackIngredient chemicalInput) {
+		return IngredientCreatorAccess.chemicalStack().from(chemicalInput.ingredient(), getOutputMultiplier(chemicalInput.amount()));
 	}
 
 	protected static ItemStack tweakOutput(ItemStack stack) {
-		stack.setCount(getOutputMultiplier(stack.getCount()));
-		return stack;
+		var copy = stack.copy();
+
+		copy.setCount(getOutputMultiplier(stack.getCount()));
+		return copy;
 	}
 
-	protected static <T extends Chemical<T>> ChemicalStack<T> tweakOutput(ChemicalStack<T> stack) {
-		stack.setAmount(getOutputMultiplier(stack.getAmount()));
-		return stack;
+	protected static ChemicalStack tweakOutput(ChemicalStack stack) {
+		var copy = stack.copy();
+
+		copy.setAmount(getOutputMultiplier(stack.getAmount()));
+		return copy;
 	}
 
 	protected static int getInputMultiplier(long count) {
@@ -87,6 +72,6 @@ public abstract class AbstractMekanismPureOreRecipeFactory<T extends MekanismRec
 
 	@Override
 	public boolean filter(RecipeHolder<T> recipe, ItemStack stack) {
-		return stack.is(ECTags.Items.PURE_ORES_SOURCE_ORES);
+		return stack.is(ECTags.Items.PURE_ORES_SOURCES_ORES);
 	}
 }
