@@ -1,6 +1,6 @@
 package sirttas.elementalcraft.loot;
 
-import com.mojang.serialization.Codec;
+import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import it.unimi.dsi.fastutil.objects.ObjectArrayList;
 import net.minecraft.world.item.ItemStack;
@@ -9,12 +9,13 @@ import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.storage.loot.LootContext;
 import net.minecraft.world.level.storage.loot.functions.ApplyBonusCount;
-import net.minecraft.world.level.storage.loot.functions.LootItemFunction;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 import net.neoforged.neoforge.common.Tags;
 import net.neoforged.neoforge.common.loot.IGlobalLootModifier;
 import net.neoforged.neoforge.common.loot.LootModifier;
+import org.jetbrains.annotations.NotNull;
+import sirttas.elementalcraft.enchantment.ECEnchantmentHelper;
 import sirttas.elementalcraft.infusion.tool.ToolInfusionHelper;
 
 import javax.annotation.Nonnull;
@@ -22,9 +23,8 @@ import java.util.stream.Collectors;
 
 public class FireInfusionLootModifier extends LootModifier {
 
-	public static final Codec<FireInfusionLootModifier> DIRECT_CODEC = RecordCodecBuilder.create(i -> codecStart(i).apply(i, FireInfusionLootModifier::new));
+	public static final MapCodec<FireInfusionLootModifier> DIRECT_CODEC = RecordCodecBuilder.mapCodec(i -> codecStart(i).apply(i, FireInfusionLootModifier::new));
 
-	private static final LootItemFunction FORTUNE = ApplyBonusCount.addUniformBonusCount(Enchantments.BLOCK_FORTUNE).build();
 	
 	protected FireInfusionLootModifier(LootItemCondition[] conditions) {
 		super(conditions);
@@ -32,17 +32,18 @@ public class FireInfusionLootModifier extends LootModifier {
 
 	private ItemStack applyAutoSmelt(ItemStack stack, LootContext context) {
 		var level = context.getLevel();
-		var recipe = level.getRecipeManager().byType(RecipeType.SMELTING).values().stream()
+		var registry = level.registryAccess();
+		var recipe = level.getRecipeManager().byType(RecipeType.SMELTING).stream()
 				.map(RecipeHolder::value)
-				.filter(r -> r.getIngredients().get(0).test(stack))
+				.filter(r -> r.getIngredients().getFirst().test(stack))
 				.findFirst();
 
 		if (recipe.isPresent()) {
-			ItemStack ret = recipe.get().getResultItem(level.registryAccess()).copy();
+			var ret = recipe.get().getResultItem(registry).copy();
 
 			ret.setCount(ret.getCount() * stack.getCount());
 			if (stack.is(Tags.Items.ORES)) {
-				FORTUNE.apply(ret, context);
+				ApplyBonusCount.addUniformBonusCount(ECEnchantmentHelper.getEnchantmentHolder(registry, Enchantments.FORTUNE)).build().apply(ret, context);
 			}
 			return ret;
 		}
@@ -51,7 +52,7 @@ public class FireInfusionLootModifier extends LootModifier {
 
 	@Nonnull
 	@Override
-	protected ObjectArrayList<ItemStack> doApply(ObjectArrayList<ItemStack> generatedLoot, LootContext context) {
+	protected ObjectArrayList<ItemStack> doApply(@NotNull ObjectArrayList<ItemStack> generatedLoot, LootContext context) {
 		var tool = context.getParamOrNull(LootContextParams.TOOL);
 
 		if (tool != null && !tool.isEmpty() && ToolInfusionHelper.hasAutoSmelt(tool)) {
@@ -63,7 +64,7 @@ public class FireInfusionLootModifier extends LootModifier {
 	}
 
 	@Override
-	public Codec<? extends IGlobalLootModifier> codec() {
+	public @NotNull MapCodec<? extends IGlobalLootModifier> codec() {
 		return DIRECT_CODEC;
 	}
 }
