@@ -1,222 +1,148 @@
 package sirttas.elementalcraft.spell;
 
-import com.mojang.datafixers.util.Pair;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.ListTag;
-import net.minecraft.nbt.Tag;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.core.Holder;
 import net.minecraft.util.RandomSource;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.ItemStack;
 import sirttas.elementalcraft.api.element.ElementType;
-import sirttas.elementalcraft.api.name.ECNames;
-import sirttas.elementalcraft.nbt.NBTHelper;
+import sirttas.elementalcraft.component.ECDataComponents;
 
-import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.function.ObjIntConsumer;
-import java.util.stream.IntStream;
 import java.util.stream.StreamSupport;
 
 public class SpellHelper {
 
 	private SpellHelper() {}
 	
-	public static Spell getSpell(ItemStack stack) {
-		return getSpellFromTag(NBTHelper.getECTag(stack));
+	public static Holder<Spell> getSpell(ItemStack stack) {
+		return stack.getOrDefault(ECDataComponents.SPELL, Spells.NONE);
 	}
 
-	public static void setSpell(ItemStack stack, Spell spell) {
-		CompoundTag nbt = NBTHelper.getOrCreateECTag(stack);
-
-		nbt.putString(ECNames.SPELL, spell.getKey().toString());
+	public static void setSpell(ItemStack stack, Holder<Spell> spell) {
+		stack.set(ECDataComponents.SPELL, spell);
 	}
 
-	public static void removeSpell(ItemStack stack, Spell spell) {
-		ListTag list = getSpellList(stack);
+	public static void removeSpell(ItemStack stack, Holder<Spell> spell) {
+		var list = getSpellList(stack);
 
-		if (list != null && !list.isEmpty()) {
-			for (int i = 0; i < list.size(); i++) {
-				CompoundTag tag = (CompoundTag) list.get(i);
+		if (list.isEmpty()) {
+			return;
+		}
 
-				if (tag.getString(ECNames.SPELL).equals(spell.getKey().toString())) {
-					int count = tag.getInt(ECNames.COUNT);
+		var newList = list.mutable()
+				.remove(spell)
+				.immutable();
 
-					if (count > 1) {
-						tag.putInt(ECNames.COUNT, count - 1);
-					} else {
-						moveSelected(stack, -1);
-						list.remove(i);
-						if (list.isEmpty()) {
-							setSpell(stack, Spells.NONE.get());
-						}
-					}
-					return;
-				}
-			}
+		stack.set(ECDataComponents.SPELL_LIST, newList);
+		if (getSpell(stack).is(spell)) {
+			setSpell(stack, newList.isEmpty() ? Spells.NONE : newList.getSpellAt(0));
 		}
 	}
 
-	public static ListTag getOrCreateSpellList(ItemStack stack) {
-		CompoundTag nbt = NBTHelper.getOrCreateECTag(stack);
-		ListTag list = nbt.getList(ECNames.SPELL_LIST, 10);
-
-		if (!nbt.contains(ECNames.SPELL_LIST)) {
-			nbt.put(ECNames.SPELL_LIST, list);
-		}
-		return list;
-	}
-
-	public static void forEachSpell(ItemStack stack, ObjIntConsumer<Spell> consumer) {
-		ListTag list = getSpellList(stack);
-
-		if (list != null && !list.isEmpty()) {
-			list.forEach(t -> {
-				CompoundTag tag = (CompoundTag) t;
-
-				consumer.accept(getSpellFromTag(tag), tag.getInt(ECNames.COUNT));
-			});
-		}
-	}
-
-	public static List<Pair<Spell, Integer>> getSpellsAsMap(ItemStack stack) {
-		ListTag list = getSpellList(stack);
-
-		if (list != null && !list.isEmpty()) {
-			List<Pair<Spell, Integer>> value = new ArrayList<>(list.size());
-
-			list.forEach(t -> {
-				CompoundTag tag = (CompoundTag) t;
-
-				value.add(new Pair<>(getSpellFromTag(tag), tag.getInt(ECNames.COUNT)));
-			});
-			return value;
-		}
-		return Collections.emptyList();
+	public static SpellList getSpellList(ItemStack stack) {
+		return stack.getOrDefault(ECDataComponents.SPELL_LIST, SpellList.EMPTY);
 	}
 
 	public static void copySpells(ItemStack source, ItemStack target) {
-		ListTag list = getSpellList(source);
-		Spell spell = getSpell(source);
+		var list = getSpellList(source);
 
-		if (list != null && !list.isEmpty()) {
-			NBTHelper.getOrCreateECTag(target).put(ECNames.SPELL_LIST, list.copy());
+		if (!list.isEmpty()) {
+			target.set(ECDataComponents.SPELL_LIST, list.mutable().immutable());
 		}
-		if (spell.isValid()) {
+
+		var spell = getSpell(source);
+
+		if (isValid(spell)) {
 			setSpell(target, spell);
 		}
 	}
-	
-	public static int getSpellCount(ItemStack stack) {
-		ListTag list = getSpellList(stack);
 
-		if (list != null && !list.isEmpty()) {
-			return list.stream().mapToInt(t -> ((CompoundTag) t).getInt(ECNames.COUNT)).sum();
-		}
-		return 0;
+	public static boolean isValid(Holder<Spell> spell) {
+		return spell.value().isValid();
 	}
 
-	public static void addSpell(ItemStack stack, Spell spell) {
-		ListTag list = getOrCreateSpellList(stack);
+	public static boolean isVisible(Holder<Spell> spell) {
+		return spell.value().isVisible();
+	}
 
-		for (Tag value : list) {
-			if (value instanceof CompoundTag tag && isSpellInTag(tag, spell)) {
-				tag.putInt(ECNames.COUNT, tag.getInt(ECNames.COUNT) + 1);
-				return;
-			}
+	public static void addSpell(ItemStack stack, Holder<Spell> spell) {
+		var list = getSpellList(stack);
+
+		if (list.isFull()) {
+			return;
 		}
-		CompoundTag tag = new CompoundTag();
 
-		tag.putString(ECNames.SPELL, spell.getKey().toString());
-		tag.putInt(ECNames.COUNT, 1);
-		list.add(tag);
-		if (list.size() == 1) {
+		var newList = list.mutable()
+				.add(spell)
+				.immutable();
+
+		stack.set(ECDataComponents.SPELL_LIST, newList);
+		if (newList.count() == 1) {
 			setSpell(stack, spell);
 		}
 	}
 
 	public static int getSelected(ItemStack stack) {
-		ListTag list = getSpellList(stack);
-		Spell spell = getSpell(stack);
+		var list = getSpellList(stack);
 
-		if (list != null && !list.isEmpty()) {
-			return IntStream.range(0, list.size()).filter(j -> isSpellInTag(list.get(j), spell)).findFirst().orElse(0);
+		if (list.isEmpty()) {
+			return -1;
 		}
-		return 0;
+		var spell = getSpell(stack);
+
+		return list.getIndex(spell);
 	}
 
 	public static void setSelected(ItemStack stack, int i) {
-		ListTag list = getSpellList(stack);
+		var list = getSpellList(stack);
 
-		if (list != null && !list.isEmpty()) {
-			if (i < 0) {
-				i = list.size() - 1;
-			} else if (i >= list.size()) {
-				i = 0;
-			}
-			setSpell(stack, getSpellFromTag(list.get(i)));
+		if (list.isEmpty()) {
+			return;
 		}
+		setSpell(stack, list.getSpellAt(i));
 	}
 
-	public static void moveSelected(ItemStack stack, int i) {
-		setSelected(stack, getSelected(stack) + i);
-	}
-	
-	@Nullable
-	private static ListTag getSpellList(ItemStack stack) {
-		CompoundTag nbt = NBTHelper.getECTag(stack);
-
-		if (nbt != null && nbt.contains(ECNames.SPELL_LIST)) {
-			return nbt.getList(ECNames.SPELL_LIST, 10);
-		}
-		return null;
+	public static Holder<Spell> randomSpell(RandomSource rand) {
+		return randomSpell(Spells.REGISTRY.holders().toList(), rand);
 	}
 
-	private static Spell getSpellFromTag(Tag nbt) {
-		if (nbt instanceof CompoundTag compoundTag) {
-			return Spells.REGISTRY.get(new ResourceLocation(compoundTag.getString(ECNames.SPELL)));
-		}
-		return Spells.NONE.get();
-	}
+	public static Holder<Spell> randomSpell(ElementType type, RandomSource rand) {
+		return randomSpell(Spells.REGISTRY.holders()
+				.filter(spell -> {
+					var value = spell.value();
 
-	private static boolean isSpellInTag(Tag nbt, Spell spell) {
-		if (nbt instanceof CompoundTag compoundTag && compoundTag.contains(ECNames.SPELL)) {
-			return compoundTag.getString(ECNames.SPELL).equals(spell.getKey().toString());
-		}
-		return false;
-	}
-
-	public static Spell randomSpell(RandomSource rand) {
-		return randomSpell(Spells.REGISTRY, rand);
-	}
-
-	public static Spell randomSpell(ElementType type, RandomSource rand) {
-		return randomSpell(Spells.REGISTRY.stream()
-				.filter(spell -> spell.getElementType() == type && spell.isValid())
+					return value.getElementType() == type && value.isValid();
+				})
 				.toList(), rand);
 	}
 
-	public static Spell randomSpell(Iterable<Spell> spells, RandomSource rand) {
-		var list = StreamSupport.stream(spells.spliterator(), false).filter(Spell::isValid).toList();
-		int roll = rand.nextInt(list.stream().mapToInt(Spell::getWeight).sum());
+	public static Holder<Spell> randomSpell(Iterable<? extends Holder<Spell>> spells, RandomSource rand) {
+		var list = StreamSupport.stream(spells.spliterator(), false)
+				.filter(SpellHelper::isValid)
+				.toList();
+
+		if (list.isEmpty()) {
+			return Spells.NONE;
+		}
+
+		int roll = rand.nextInt(list.stream()
+				.mapToInt(h -> h.value().getWeight())
+				.sum());
 		
-		for (Spell spell : list) {
-			roll -= spell.getWeight();
+		for (var spell : list) {
+			roll -= spell.value().getWeight();
 			if (roll < 0) {
 				return spell;
 			}
 		}
-		return list.get(list.size() - 1);
+		return list.getLast();
 	}
 
-    public static Spell getSpellInUse(Entity entity) {
+    public static Holder<Spell> getSpellInUse(Entity entity) {
 		// TODO spell casting monster
 		if (entity instanceof LivingEntity livingEntity && livingEntity.isUsingItem()) {
 			return getSpell(livingEntity.getUseItem());
 		}
-		return Spells.NONE.get();
+		return Spells.NONE;
     }
 }
